<resources>
    <string name="app_name">Covid19</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Api Covid 19</string>
    <string name="nav_header_subtitle">Vacine-se!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_localizar_posto_saude">Sintomas de Covid?</string>
    <string name="action_exportar_dados">Armazenar dados</string>

    <string name="menu_home">Home</string>
    <string name="menu_estado">Por Estado</string>
    <string name="menu_estados">Boletim Consolidado</string>
    <string name="menu_diario">Boletim Diário</string>
    <string name="data_da_pesquisa">Data da pesquisa:</string>
    <string name="label_casos_confirmados">Casos estados:</string>
    <string name="label_estado">Estado:</string>
    <string name="label_confirmados">Confirmados:</string>
    <string name="label_suspeitos">Suspeitos:</string>
    <string name="label_mortes">Mortes:</string>
    <string name="label_descartados">Descartados:</string>
    <string name="label_data">Data:</string>
    <string name="btn_pesquisar_estado">Pesquisar</string>
    <string name="label_pesquisar_estado">Pesquisar...</string>
    <string name="txt_home_nome_api">https://covid19-brazil-api-docs.vercel.app/</string>
    <string name="txt_titulo_home">Notificações de casos de doença pelo SARS-CoV-2 (COVID-19) no Brasil</string>
    <string name="txt_label_api">Dados obtidos a partir da API:</string>
    <string name="pesquisar">Pesquisar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="vacina_salva">Vacina salva!</string>
</resources>